--- a/css/searchPanes.jqueryui.scss
+++ b/css/searchPanes.jqueryui.scss
@@ -180,14 +180,19 @@ div.dtsp-panesContainer {
 		
 							div.dtsp-nameCont {
 								width: 100%;
+								display: flex;
+								flex-direction: row;
+								justify-content: flex-start;
+								align-content: flex-start;
+								align-items: flex-start;
 			
 								span.dtsp-name {
 									text-overflow: ellipsis;
 									overflow: hidden;
 									display: inline-block;
-									width: calc(100% - 40px);
 									vertical-align: middle;
 									white-space: nowrap;
+									flex-grow: 1;
 								}
 
 								span.dtsp-pill {
