--- a/css/searchPanes.semanticui.scss
+++ b/css/searchPanes.semanticui.scss
@@ -100,14 +100,20 @@ div.dtsp-panesContainer{
     
                         div.dtsp-nameCont {
                             width: 100%;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: flex-start;
+                            align-content: flex-start;
+                            align-items: flex-start;
+
         
                             span.dtsp-name {
                                 text-overflow: ellipsis;
                                 overflow: hidden;
                                 display: inline-block;
-                                width: calc(100% - 30px);
                                 vertical-align: middle;
                                 white-space: nowrap;
+                                flex-grow: 1;
                             }
 
                             span.dtsp-pill {
